--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -4,7 +4,7 @@ body {
     background-color: #eee;
 }
 
-.form-signin {
+.form-signin, .text-content {
     max-width: 330px;
     padding: 15px;
     margin: 0 auto;
