--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -46,3 +46,17 @@ body {
 .has-error {
     color: red
 }
+
+.chips {
+    margin-bottom: 20px;
+}
+.chip {
+    display: inline-block;
+    padding: 10px 25px 10px 0;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+#support-footer {
+    margin-top: 40px;
+}
